lib/src/compiler/tests/testdata/errors/24.out
error[E002]: wrong type
 --> line:5:5
  |
5 |     "1" of them
  |     ^^^ expression should be `integer`, but is `string`
  |